--- a/src/profiles/about/components/AboutItem.css
+++ b/src/profiles/about/components/AboutItem.css
@@ -1,8 +1,6 @@
 .section-about{
     padding-top: 0px;
-    display: flex;
-    justify-content:flex-start;
-    flex-direction: column;
+    
     
    
     
@@ -29,22 +27,37 @@
     /* background-color: brown; */
 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    max-width: 80%;
+    padding-left: 200px;
     
     
 }
 
 .about-info{
+    
+    width: 100%;
+    
+    max-width: calc(100%-60px);
+    margin: auto;
     display: flex;
+    flex-direction: row;
+    padding-bottom: 40px;
    
 }
 
-.info{
-    padding-right: 30px;   
+.about-info .info{
     
-    
+    font-weight:10px;
+    width: 60%;
+    color: whitesmoke;
+    text-align: start;
 }
 
-image{
+.about-info .image{
+    width: 50%;
+    padding: 10px;
+    height: 30%;
+    
 
 }
 
@@ -95,6 +108,17 @@ image{
     font-weight: lighter;
 }
 
-.about-item__image{
 
+@media (max-width: 1300px ){
+    .about-info .image{
+        display: none;
+    }
+    .about-item__info{
+        padding: 0;
+    }
+
+    .about-info .info{
+        width: 100%;
+        font-size: calc(18px + 10vw);
+    }
 }
