--- a/src/profiles/intro/components/IntroItem.css
+++ b/src/profiles/intro/components/IntroItem.css
@@ -1,8 +1,8 @@
 .section-intro{
-    background:  #379683;
+    
     display:flex;
     justify-content:center;
-    flex-direction: column;
+    flex-direction: row;
    
     
 }
@@ -16,7 +16,9 @@
     max-width: 800px;
     margin: 0 auto;
     padding: 40px;
-    
+    display: flex; 
+    justify-content: center;
+    flex-direction: column;
     /* background-color: blueviolet; */
     
     
@@ -24,12 +26,19 @@
     
 }
 
+.section-content .email-phone{
+    color: whitesmoke;
+    padding: 10px;
+}
 .intro-item__info{
     
     /* background-color: brown; */
 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
+
+    display: flex;
+    justify-content:flex-start;
+    flex-direction: column;
 }
 
 .intro-item__info h1 {
