--- a/src/profiles/projects/components/ProjectItem.css
+++ b/src/profiles/projects/components/ProjectItem.css
@@ -106,7 +106,15 @@
     padding-bottom: 20px;
 }
 
-@media (max-width: 1300px ){
+.credit{
+    text-align:center;
+    color: white;
+    font-size: 7px;
+    font-weight: lighter;
+    padding-top: 50px;
+    opacity: 0.5;
+}
+@media (max-width: 1000px ){
     .modalImage img{
         display: none;
     }
