--- a/src/profiles/works/components/WorkItem.css
+++ b/src/profiles/works/components/WorkItem.css
@@ -14,17 +14,13 @@
     margin: 0;
 }
 
-
-@media (max-width: 1300px){
-    .tab {
-        display: none;
-    }
-    .intro-item__info{
-        font-size: 3px;
-    }
+.work-tab{
+    display: none;
 }
-@media (min-width: 1300px){
-    .work-tab-item{
-        display:none;
-    }
+
+
+@media (min-width: 100px) and (max-width: 1200px){
+    .work-tab{
+        display: block;
+    };
 }
