--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App{
+  /* background: #1F2833; */
+  /* background: #5CDB95; */
   background: #1F2833;
   display: flex; 
   flex-direction: column;
