--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -20,6 +20,7 @@
 .nav .nav-content {
     max-width: 900px;
     padding: 0rem 3rem;
+    padding-left: 110px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -33,7 +34,15 @@
     color:white;
 }
 
-.nav-item:hover {
+.style{
+    color: #66FCf1;
+}
+
+.style:hover{
     color: black;
+}
+
+.nav-item:hover {
+    color:#66FCf1;
     cursor: pointer;
 }
