--- a/src/profiles/about/components/AboutItem.css
+++ b/src/profiles/about/components/AboutItem.css
@@ -6,7 +6,7 @@
     
 }
 .section-background{
-    background: #1F2833;
+    
     
     
 
@@ -18,7 +18,7 @@
     /* background-color: brown; */
 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    max-width: 80%;
+    max-width: 100%;
     
     
     
@@ -40,14 +40,14 @@
     
     font-weight:10px;
     width: 60%;
-    color: whitesmoke;
+    color: #66FCf1;
     text-align: start;
 }
 
-.about-info .image{
-    width: 50%;
+.about-info .image .img{
+    width: 400px;
     padding: 10px;
-    height: 30%;
+    height: 400px;
     
 
 }
@@ -60,8 +60,8 @@
 
 .about-item__info h1 {
     font-size: 30px;
-    color: #66FCF1;
-    font-weight: lighter;
+    color: #66FCf1;
+    
     
 }
 
@@ -69,34 +69,34 @@
     max-width: 450px;
     font-size: 20px;
     color: whitesmoke;
-    font-weight: lighter;
+    
 }
 
 .about-item__info h3{
     max-width: 450px;
     font-size: 20px;
     color: whitesmoke;
-    font-weight: lighter;
+    
 }
 
 .about-item__info h2{
     max-width: 450px;
     font-size: 20px;
     color: whitesmoke;
-    font-weight: lighter;
+    
 }
 
 .about-item__info h4 {
     max-width: 450px;
     font-size: 20px;
     color: whitesmoke;
-    font-weight: lighter;
+    
 }
 .about-item__info p{
     max-width: 450px;
     font-size: 15px;
     color: whitesmoke;
-    font-weight: lighter;
+    
 }
 
 
