--- a/src/profiles/shared/UIElements/Button.css
+++ b/src/profiles/shared/UIElements/Button.css
@@ -1,9 +1,9 @@
 .button {
     font: inherit;
     padding: 0.5rem 1.5rem;
-    border: 1px solid #ff0055;
+    border: 1px solid #66FCf1;
     border-radius: 4px;
-    background: #ff0055;
+    background: #1F2833;
     color: white;
     cursor: pointer;
     margin-right: 1rem;
@@ -17,30 +17,30 @@
   
   .button:hover,
   .button:active {
-    background: #ff4382;
-    border-color: #ff4382;
+    background: #66FCf1;
+    border-color: #66FCf1;
   }
   
   .button--inverse {
     background: transparent;
-    color: #ff0055;
+    color: #66FCf1;
   }
   
   .button--inverse:hover,
   .button--inverse:active {
-    color: white;
-    background: #ff0055;
+    color: black;
+    background: #66FCf1;
   }
   
   .button--danger {
-    background: #830000;
-    border-color: #830000;
+    background: #66FCf1;
+    border-color: #66FCf1;
   }
   
   .button--danger:hover,
   .button--danger:active {
-    background: #f34343;
-    border-color: #f34343;
+    background: #66FCf1;
+    border-color: #66FCf1;
   }
   
   .button:disabled,
